# particles-explosion

./: CMakeLists.txt  Makefile.txt  Particle.cpp  Particle.h  README.md  Screen.cpp  Screen.h  main.cpp
include/: Emitter.h  Particle.h  Screen.h
src/: Emitter.cpp  Particle.cpp  Screen.cpp  fetching_color_with_binary_and.cpp  main.cpp
